Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL)
Description
MySQL 5.7.30 includes the fix
Bug#30405531 : I_INNODB_ZIP.BUG16067973 FAILS ON UBSAN WEEKLY-TRUNK
of a race condition between the debug instrumentation SET GLOBAL innodb_buffer_pool_evict='uncompressed'; and buf_LRU_free_block(), which was later renamed to buf_LRU_free_page().
The fix is applicable to MariaDB. It is only affecting debug builds.
Attachments
Issue Links
- blocks
-
MDEV-22394 Merge new release of InnoDB 5.7.30 to 10.2
-
- Closed
-