MDEV-22392 Race condition on SET GLOBAL innodb_buffer_pool_evict='uncompressed'

innodb_buffer_pool_evict_uncompressed(): Restart the loop when
prev_block might not enjoy mutex protection.

This is based on
mysql/mysql-server@eccaecac070b6747ecf14d6b9150791f8c3e8f6d